--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -81,7 +81,7 @@
     "Change my password": "Change my password",
     "Reload personal token": "Reload personal token",
     "Set avatar from Gravatar": "Set avatar from Gravatar",
-    "Set avatar from auth. provider":"Set avatar from auth. provider",
+    "Set avatar from auth. provider": "Set avatar from auth. provider",
     "Change your picture": "Change your picture",
     "Origins": "Origins",
     "delete account": "Are you sure you want to delete your account? This action cannot be undone ...",
@@ -192,7 +192,7 @@
     "Asset title": "Asset title",
     "Search ...": "Search ...",
     "delete.tenant.confirm": "Are you sure you want to delete this tenant?",
-    "delete.last.tenant.confirm":  "You can't delete the last tenant because Daikoku won't work without him.",
+    "delete.last.tenant.confirm": "You can't delete the last tenant because Daikoku won't work without him.",
     "Create a new tenant": "Create a new tenant",
     "Find a tenant": "Find a tenant",
     "Remove tenant": "Remove tenant",
@@ -1206,7 +1206,7 @@
     "otoroshi.list.add.label": "Add an Otoroshi instance",
     "Global stats": "Global stats",
     "apikeys visibility": "API keys visibility",
-    "motivations.modal.title": "Tell us why do you want an API key",
+    "motivations.modal.title": "Additional information regarding the request",
     "Daily quotas consumed": "Daily quotas consumed",
     "Monthly quotas consumed": "Monthly quotas consumed",
     "daily.quotas.consumed.title": "%s daily calls consumed over %s",
@@ -1255,19 +1255,19 @@
     "set.favicon": "favicon",
     "set.font.family": "font family",
     "select.team.placeholder": "Select a team",
-    "otoroshi.missing.entities":"Missing Otoroshi entities",
-    "otoroshi.missing.target":"Missing Otoroshi target",
-    "apiList.tag.search":"Search a tag",
-    "apiList.category.search":"Search a category",
-    "team.email.verification.send":"Mail sent to %s for verify this email address.",
-    "team.email.alreadyVerified":"This mail is already verified",
-    "team.email.notVerified":"Send a mail",
-    "mailValidation.sent.title":"Mail sent",
-    "mailValidation.sent.body":"An mail have been sent for validating this new email address.",
+    "otoroshi.missing.entities": "Missing Otoroshi entities",
+    "otoroshi.missing.target": "Missing Otoroshi target",
+    "apiList.tag.search": "Search a tag",
+    "apiList.category.search": "Search a category",
+    "team.email.verification.send": "Mail sent to %s for verify this email address.",
+    "team.email.alreadyVerified": "This mail is already verified",
+    "team.email.notVerified": "Send a mail",
+    "mailValidation.sent.title": "Mail sent",
+    "mailValidation.sent.body": "An mail have been sent for validating this new email address.",
     "team.validated.success": "Your email have been verified",
     "team.email.notVerified.info": "Your email isn't verified. Send a mail for verifying it.",
     "here": "here",
-    "Success":"Success",
+    "Success": "Success",
     "mail.sent": "Mail sent !",
     "token.missing": "Missing token.",
     "token.notFound": "Token not found.",
@@ -1329,5 +1329,15 @@
     "blocked": "Blocked",
     "widget.demands.no.demands": "no demands",
     "team.dashboard.label.producer": "Producer",
-    "team.dashboard.label.consumer": "Consumer"
+    "team.dashboard.label.consumer": "Consumer",
+    "motivation.form.modal.title": "Motivation form parameters",
+    "motivation.form.setting.title": "Settings",
+    "motivation.form.sample.title": "Form preview",
+    "motivation.form.preview.title": "Form preview",
+    "motivation.form.schema.label": "Schema",
+    "motivation.form.schema.help": "A @maif/react-forms compatible JSON schema to specify the different fields of the motivation form",
+    "motivation.form.formatter.label": "Formatter",
+    "motivation.form.formatter.help": "a character string in which words between “[[ ]]” will be replaced by the corresponding values retrieved from the answers provided by the user in the form and sent to the administrator for validation.",
+    "motivation.form.sample.help": "Use the test form below to preview and validate your formatting settings (formatter).",
+    "motivation.form.sample.button.label": "Test"
 }
