--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1342,5 +1342,7 @@
   "motivation.form.formatter.label": "Formatteur",
   "motivation.form.formatter.help": "une chaîne de caractères dans laquelle des mots entre « [[ ]] » seront remplacés par les valeurs correspondantes récupérées à partir des réponses fournies par l'utilisateur dans le formulaire et envoyé à l'administarteur pour validation.",
   "motivation.form.sample.help": "Utilisez le formulaire de test ci-dessous pour prévisualiser et valider vos paramètres de formatage (formatter).",
-  "motivation.form.sample.button.label": "Tester"
+  "motivation.form.sample.button.label": "Tester",
+  "sub.meta.modal.admin.custom.name.label": "Nom personnalisé de la clé",
+  "sub.meta.modal.admin.custom.name.help": "ce nom personnalisé ne sera visible que de l'équipe d'administration"
 }
