--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1348,6 +1348,7 @@
     "display.default.label": "Default",
     "display-mode.label": "Display mode",
     "display-mode.help": "The environment mode will force you to create avalible environments. The api usage plans needs to match one of the avalible environments.",
-    "display-mode.environments.label": "Available environments"
+    "display-mode.environments.label": "Available environments",
+    "navbar.environments.label": "environments"
 
 }
