add some translations

--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -195,7 +195,7 @@
   "Asset title": "Titre de l'asset",
   "Search ...": "Rechercher ...",
   "delete.tenant.confirm": "Êtes-vous sûr de vouloir supprimer ce tenant ?",
-  "delete.last.tenant.confirm":  "vous ne pouvez pas supprimer le dernier tenant car sans lui Daikoku ne fonctionnera plus.",
+  "delete.last.tenant.confirm": "vous ne pouvez pas supprimer le dernier tenant car sans lui Daikoku ne fonctionnera plus.",
   "Create a new tenant": "Créer un nouveau tenant",
   "Find a tenant": "Rechercher un tenant",
   "Remove tenant": "Supprimer le tenant",
@@ -1226,7 +1226,7 @@
   "fastMode.title.page": "%s - Mode rapide",
   "fastMode.title.chooseTeam": "Choisir une team pour commencer",
   "fastMode.error.searching.team": "Une erreur s'est produite lors de la recherche de vos équipes",
-  "fastMode.input.reasonSubscription":"Renseigner le motif par défaut de votre demande de souscription",
+  "fastMode.input.reasonSubscription": "Renseigner le motif par défaut de votre demande de souscription",
   "fastMode.input.research.api": "Chercher une API",
   "fastMode.input.research.plan": "Filtrer les plans",
   "fastMode.subscription.resume": "résumé de votre demande de souscription",
@@ -1260,17 +1260,17 @@
   "select.team.placeholder": "Sélectionner une équipe",
   "otoroshi.missing.target": "Cible Otoroshi manquante",
   "otoroshi.missing.entities": "Entités Otoroshi manquantes",
-  "apiList.tag.search":"Recherchez un tag",
-  "apiList.category.search":"Recherchez une catégorie",
+  "apiList.tag.search": "Recherchez un tag",
+  "apiList.category.search": "Recherchez une catégorie",
   "team.email.verification.send": "Mail envoyé à %s pour vérifier cette adresse email.",
-  "team.email.alreadyVerified":"Cet email est déjà vérifié",
-  "team.email.notVerified":"Envoyer un mail",
-  "mailValidation.sent.title":"Mail envoyé",
-  "mailValidation.sent.body":"un mail a été envoyé pour valider cette nouvelle adresse email.",
+  "team.email.alreadyVerified": "Cet email est déjà vérifié",
+  "team.email.notVerified": "Envoyer un mail",
+  "mailValidation.sent.title": "Mail envoyé",
+  "mailValidation.sent.body": "un mail a été envoyé pour valider cette nouvelle adresse email.",
   "team.validated.success": "Votre email a été vérifié",
   "team.email.notVerified.info": "Votre email n'est pas vérifié. Envoyez un mail pour le vérifier.",
   "here": "ici",
-  "Success":"Succès",
+  "Success": "Succès",
   "mail.sent": "Mail envoyé !",
   "token.missing": "Jeton manquant.",
   "token.notFound": "Jeton introuvable.",
@@ -1352,5 +1352,11 @@
   "display-mode.label": "Mode d'affichage",
   "display-mode.help": "Le mode environnement vous obligera à créer des environnements disponibles. Les plans d'utilisation de l'API doivent correspondre à l'un des environnements disponibles.",
   "display-mode.environments.label": "Environnements disponibles",
-  "navbar.environments.label": "environnements"
+  "navbar.environments.label": "environnements",
+  "pricing.add.new.env.btn.label": "Ajouter un environnement",
+  "pricing.import.env.btn.label": "Importer un environnement",
+  "pricing.default.env.btn.label": "Environment par default",
+  "pricing.clone.env.btn.label": "Dupliquer l'environnement",
+  "pricing.edit.env.btn.label": "Modifier l'environnement",
+  "pricing.delete.env.btn.label": "Supprimer l'environnement"
 }
