--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1349,6 +1349,11 @@
     "display-mode.label": "Display mode",
     "display-mode.help": "The environment mode will force you to create avalible environments. The api usage plans needs to match one of the avalible environments.",
     "display-mode.environments.label": "Available environments",
-    "navbar.environments.label": "environments"
-
+    "navbar.environments.label": "environments",
+    "pricing.add.new.env.btn.label": "Add environment",
+    "pricing.import.env.btn.label": "Import environment",
+    "pricing.default.env.btn.label": "Default environment",
+    "pricing.clone.env.btn.label": "Duplicate environment",
+    "pricing.edit.env.btn.label": "Edit environment",
+    "pricing.delete.env.btn.label": "Delete environment"
 }
