fix subscription custom name edition

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -497,7 +497,8 @@
     "See Stats": "See stats",
     "clean archived apikeys": "clean archived API keys",
     "Copy credentials": "Copy credentials",
-    "Credientials copied": "Credentials copied",
+    "credential.copy.success": "Credentials copied",
+    "credential.copy.error": "Failed to copy credentials",
     "Search your apiKey...": "Search your API key...",
     "Api keys for": "API keys for",
     "team.members.title": "%s members",
