--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -489,7 +489,8 @@
   "See Stats": "Statistiques",
   "clean archived apikeys": "Supprimer les clés d'API archivées",
   "Copy credentials": "Copier les informations d'identification",
-  "Credientials copied": "Informations d'identifications copiées",
+  "credential.copy.success": "Informations d'identification copiées",
+  "credential.copy.error": "Echec de la copie des informations d'identification",
   "Search your apiKey...": "Rechercher vos clés d'API...",
   "Api keys for": "Clé d'API pour",
   "team.members.title": "Membres de %s",
