--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -14,7 +14,7 @@
   },
   "Apis": "APIs",
   "Organizations settings": "Paramètres de l'organisation",
-  "Daikoku settings": "Paramètre Daikoku",
+  "Daikoku settings": "Paramètres Daikoku",
   "Search": "Rechercher",
   "Quit impersonation": "Quitter l'impersonation",
   "Access to the notifications": "Accès aux notifications",
