FIX aggrgated apikey view and simplify display name

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1360,5 +1360,6 @@
     "pricing.clone.env.btn.label": "Duplicate environment",
     "pricing.edit.env.btn.label": "Edit environment",
     "pricing.delete.env.btn.label": "Delete environment",
-    "documentation.add.button.label": "Create documentation"
+    "documentation.add.button.label": "Create documentation",
+    "team_apikey_aggregatePlans_title": "Aggregated API keys"
 }
