--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -374,7 +374,7 @@
     "s": "Otoroshi",
     "p": "Otoroshis"
   },
-  "Sawgger": "Swagger",
+  "Swagger": "OpenAPI",
   "Testing": "Test",
   "Small desc.": "Desc. courte",
   "Current version": "Version courante",
@@ -456,7 +456,9 @@
   "Make it public": "Le rendre public",
   "Delete plan": "Supprimer le plan",
   "Headers": "Headers",
-  "Use swagger content": "Utiliser le contenu du swagger",
+  "Use swagger content": "Rédiger le contenu OpenAPI",
+  "swagger.additional.conf.label": "Configuration Redoc",
+  "swagger.additional.conf.help": "Valeur optionnelle. voir https://redocly.com/docs/redoc/deployment/react/#optional---pass-options",
   "Auth. name": "Nom Auth.",
   "The auth. name in api swagger": "Le nom auth. dans le swagger API",
   "The apikey client id": "Le client id de la clé d'API ",
