--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -382,7 +382,7 @@
         "s": "Otoroshi",
         "p": "Otoroshis"
     },
-    "Sawgger": "Swagger",
+    "Swagger": "OpenAPI",
     "Testing": "Testing",
     "Small desc.": "Small desc.",
     "Current version": "Current version",
@@ -464,7 +464,9 @@
     "Make it public": "Make it public",
     "Delete plan": "Delete plan",
     "Headers": "Headers",
-    "Use swagger content": "Use swagger content",
+    "Use swagger content": "Write OpenAPI definition",
+    "swagger.additional.conf.label": "Redoc configuration",
+    "swagger.additional.conf.help": "Optional value. see https://redocly.com/docs/redoc/deployment/react/#optional---pass-options",
     "Auth. name": "Auth. name",
     "The auth. name in api swagger": "The auth. name in API swagger",
     "The apikey client id": "The API key client id",
