--- a/manual/src/main/paradox/tenantusage/5.5-display.md
+++ b/manual/src/main/paradox/tenantusage/5.5-display.md
@@ -6,7 +6,7 @@ Two display modes are avalaible in Daikoku
 
 this is the basic mode of DAikoku, business oriented. The exposed API is only linked to one service and the associated usage plans have only a commercial interest.
 
-The API carries its documentation, its test configuration or even its swagger. The client side of Daikoku offers sections in the API page to display it.
+The API carries its documentation, its test configuration or even its OpenAPI definition. The client side of Daikoku offers sections in the API page to display it.
 
 ## Environment mode
 
@@ -15,7 +15,7 @@ It allows users to manage their consumption plans as working environments, bette
 Find out how this feature transforms consumption plan management.
 
 - The usage plans are now working environment
-- The environments contain the tech documentation, the swagger and the test config
+- The environments contain the tech documentation, the OpenAPI definition and the test config
 - the number envionment for an API is limited to the existing environment of the tenant
 
 to create new environment, just add a new one in the liste below the mode selector 
