--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1045,7 +1045,7 @@
     "cms.create.path_paths_constraints": "this path is already taken",
     "cms.create.body_help": "The content of the page. It must be of the same type than the content-type",
     "cms.create.draft_help": "The content of the draft page. This is useful when you want to work on a future version of your page without exposing it.",
-    "cms.create.visible_label": "If not enabled, the page will not exposed'",
+    "cms.create.visible_label": "If not enabled, the page will not be exposed",
     "cms.create.authenticated": "Authenticated",
     "cms.create.authenticated_help": "If enabled, the page will be only visible for authenticated user",
     "cms.create.metadata_help": "Linked metadata",
@@ -1060,7 +1060,7 @@
     "cms.create.draft_preview": "Viewed draft page",
     "cms.inserted": "The text has been added",
     "cms.create.exact": "Exact path",
-    "cms.create.exact.help": "this page will be visible only if path is exactly equal to the exposed path",
+    "cms.create.exact.help": "This page will be visible only if path is exactly equal to the exposed path",
     "cms.pages.remove_confirm": "Are your sure to delete this page?",
     "cms.content_side_view.choose_link": "A link to a back office page",
     "cms.content_side_view.link_to_insert": "A link to your own other pages",
