--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1372,5 +1372,10 @@
     "aggregated.apikey.badge.title": "Aggregated API key",
     "aggregated.apikey.badge.apikey.name": "API key custom name",
     "apisubscription.lastUsage.label": "Last usage",
-    "N/A": "N/A"
+    "N/A": "N/A",
+    "anonymous.reporting.success.enabled" : "Anonymous reporting enabled.",
+    "anonymous.reporting.success.disabled" : "Anonymous reporting disabled.",
+    "anonymous.reporting.error": "Error while changing value.",
+    "anonymous.reporting.popup.info": "Enable Anonymous reporting for helping us ? This will help us a lot. More info at (url Doc).",
+    "anonymous.reporting.popup.no": "Anonymous Reporting not accepted."
 }
