--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -909,9 +909,10 @@
     "team_member.invit_user": "Invite a collaborator",
     "team_member.invite_user_to": "Invite a collaborator to ",
     "team_member.send_email": "Send invitation",
-    "team_member.invitation": "Join %s",
+    "team_member.invitation": "The team %s has invited you to join them. Please create an account first then accept the invitation in your notification center.",
+    "team_member.invitation.decline.successful": "Invitation successfully declined",
     "team_member.accept_invitation": "Accept",
-    "team_member.refuse_invitation": "Refuse",
+    "team_member.refuse_invitation": "Decline",
     "team_member.has_joined": "You're now in the team",
     "team_member.missing_token": "Missing token",
     "login_page.register_message": "New to %s ?",
