--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -901,9 +901,10 @@
   "team_member.invit_user": "Inviter un collaborateur",
   "team_member.invite_user_to": "Inviter un collaborateur dans",
   "team_member.send_email": "Envoyer l'invitation",
-  "team_member.invitation": "Rejoindre %s",
+  "team_member.invitation": "L'équipe %s vous a invité à la rejoindre, veuillez d'abord créer un compte puis accepter l'invitation dans votre centre de notification.",
+  "team_member.invitation.decline.successful": "Invitation refusée avec succès",
   "team_member.accept_invitation": "Accepter",
-  "team_member.refuse_invitation": "Refuser",
+  "team_member.refuse_invitation": "Décliner",
   "team_member.has_joined": "Vous avez rejoint l'équipe",
   "team_member.missing_token": "Jeton manquant",
   "login_page.register_message": "Nouveau sur %s ?",
