--- a/manual/docs/02-usages/index.mdx
+++ b/manual/docs/02-usages/index.mdx
@@ -7,6 +7,6 @@ import {DocumentationUsagesHub} from '@site/src/components/DocumentationThemeHub
 
 # Usages
 
-The experience provided by Daikoku can vary significantly depending on your role and specific use you wish to make of it. daikoku offer user experience customization to meet the specific needs of each user, based on their enablement and goals.
+The experience provided by Daikoku can vary significantly depending on your role and specific use you wish to make of it. Daikoku offers user experience customization to meet the specific needs of each user, based on their enablement and goals.
 
 <DocumentationUsagesHub />
