--- a/manual/docs/02-usages/08-tenantusage/1.5-initialize.md
+++ b/manual/docs/02-usages/08-tenantusage/1.5-initialize.md
@@ -1,11 +1,11 @@
 # Initialize Tenant from Otoroshi instances
-You perhaps have a previous instance of Otoroshi, whiche contains services and lot of apikeys. This page have been created to easily import service group as API and apikeys as subscriptions in a tenant of your Daikoku instance.
+You perhaps have a previous instance of Otoroshi, which contains services and a lot of apikeys. This page has been created to easily import service groups as API and apikeys as subscriptions in a tenant of your Daikoku instance.
 
 Go to `settings/Organizations settings` and click `Initialization` on the left menu.
 
-Now, it's easy as just follow steps.
+Now, it's easy as just follow the steps.
 
-## Select Otoroshi instance
+## Select the Otoroshi instance
 
 Just select a previously created Otoroshi instance to begin.
 
@@ -15,29 +15,29 @@ You can begin to import Otoroshi service groups or just Otoroshi apikeys
 
 ## Select Service group to import
 
-You have to choose which services you want to import. It's completly possible to change the API name but no necessary. 
-You have to choose a team to admin the crated API. If the team doesn't exist, you can create a team in this screen.
-Your action is just, for the moment, to tack the api to create, the creation will be effective later.  
-_notice: Every choice you make are saved on your local storage in case of problem._
+You have to choose which services you want to import. It's completely possible to change the API name but it's no necessary. 
+You have to choose a team to administer the created API. If the team doesn't exist, you can create one on this screen.
+Your action is just, for the moment, to stack the API to create, the creation will be effective later.  
+_Notice: Every choice you make is saved on your local storage in case of a problem._
 
 ## Services - Recap and creation
 
-The next screen list all API to create. If your agree with this, you can click on the `create` button to launch the APIs creation.
+The next screen lists all the APIs to create. If you are agree with this, you can click on the `create` button to launch the APIs creation.
 
 ## Select API keys to import
 
 You have to choose which API keys you want to import.
-You have to choose an API with a plan and a team for every API keys. If the plan does't exists, you can create a plan in this screen (_notice: it will a FreePlan but you can change it after creation_).  
-If the team doesn't exist, you can create a team in this screen.
+You have to choose an API with a plan and a team for every API keys. If the plan doesn't exists, you can create one on this screen (_notice: it will be a FreePlan, but you can change it after creation_).  
+If the team doesn't exist, you can create one on this screen.
 Your action is just, for the moment, to stack the API key to create, the creation will be effective later.  
-_notice: Every choice you make are saved on your local storage in case of problem._
+_Notice: Every choice you make is saved on your local storage in case of a problem._
 
 ## Subscriptions - Recap and creation
 
-The next screen list all subscriptions to create. If your agree with this, you can click on the create button to launch the subscriptios creation.
+The next screen lists all subscriptions to create. If you are agree with this, you can click on the create button to launch the subscription creation.
 
 ## Done
 
-All the selected APIs and API keys are created. You have certainly to go to API page to update some informations because APIs are just created with default informations, just name and plan.
+All the selected APIs and API keys habe been created. You have certainly got to the API page to update some informations because APIs are just created with default informations, just name and plan.
 If you have created some teams, be aware that you are the only member of those teams.
-You can import APIS and API keys from another Otorshi instance if you wish.
+You can import APIs and API keys from another Otoroshi instance if you wish.
