--- a/manual/docs/02-usages/08-tenantusage/5.5-display.md
+++ b/manual/docs/02-usages/08-tenantusage/5.5-display.md
@@ -1,12 +1,12 @@
 # Display modes
 
-Two display modes are avalaible in Daikoku
+Two display modes are available in Daikoku
 
 ## Default mode
 
-this is the basic mode of DAikoku, business oriented. The exposed API is only linked to one service and the associated usage plans have only a commercial interest.
+This is the basic mode of Daikoku, business oriented. The exposed API is only linked to one service and the associated usage plans have only a commercial interest.
 
-The API carries its documentation, its test configuration or even its OpenAPI definition. The client side of Daikoku offers sections in the API page to display it.
+The API carries its documentation, its test configuration or even its OpenAPI definition. The client side of Daikoku offers sections in the API page to display them.
 
 ## Environment mode
 
@@ -16,6 +16,6 @@ Find out how this feature transforms consumption plan management.
 
 - The usage plans are now working environment
 - The environments contain the tech documentation, the OpenAPI definition and the test config
-- the number envionment for an API is limited to the existing environment of the tenant
+- The number environment for an API is limited to the existing environment of the tenant
 
-to create new environment, just add a new one in the liste below the mode selector 
+To create a new environment, just add a new one in the list below the mode selector 
