--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1360,7 +1360,7 @@
   "display.environment.label": "Environnement",
   "display.default.label": "Défaut",
   "display-mode.label": "Mode d'affichage",
-  "display-mode.help": "Le mode environnement vous obligera à créer des environnements disponibles. Les plans d'utilisation de l'API doivent correspondre à l'un des environnements disponibles.",
+  "display-mode.help": "Le mode environnement vous obligera à créer des environnements disponibles.<br> Les plans d'utilisation de l'API doivent correspondre à l'un des environnements disponibles.",
   "display-mode.environments.label": "Environnements disponibles",
   "display-mode.environments.deletion.alert": "Veuillez noter que la suppression d'un environnement entraînera la suppression de son implémentation pour toutes les API.",
   "navbar.environments.label": "environnements",
