--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1360,7 +1360,7 @@
     "display-mode.help": "The environment mode will force you to create available environments. The api usage plans needs to match one of the available environments.",
     "display-mode.environments.label": "Available environments",
     "display-mode.environments.deletion.alert": "Please note that deleting an environment will result in the deletion of its implementation for all APIs",
-    "navbar.environments.label": "environments",
+    "navbar.environments.label": "Environments",
     "pricing.add.new.env.btn.label": "Add environment",
     "pricing.import.env.btn.label": "Import environment",
     "pricing.default.env.btn.label": "Default environment",
