--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1363,7 +1363,7 @@
   "display-mode.help": "Le mode environnement vous obligera à créer des environnements disponibles.<br> Les plans d'utilisation de l'API doivent correspondre à l'un des environnements disponibles.",
   "display-mode.environments.label": "Environnements disponibles",
   "display-mode.environments.deletion.alert": "Veuillez noter que la suppression d'un environnement entraînera la suppression de son implémentation pour toutes les API.",
-  "navbar.environments.label": "environnements",
+  "navbar.environments.label": "Environnements",
   "pricing.add.new.env.btn.label": "Ajouter un environnement",
   "pricing.import.env.btn.label": "Importer un environnement",
   "pricing.default.env.btn.label": "Environment par default",
