--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1374,7 +1374,7 @@
     "aggregated.apikey.badge.apikey.name": "API key custom name",
     "apisubscription.lastUsage.label": "Last usage",
     "N/A": "N/A",
-    "semver.error.message": "Can't create version with special characters : %s",
-    "version.creation.success.message": "New version of api created successfully",
-    "error.message.creation.security.enabled": "You're not authorized to create API, please contact your administrator."
+    "semver.error.message": "Can't create a version with special characters : %s",
+    "version.creation.success.message": "New version of API created successfully",
+    "error.message.creation.security.enabled": "You're not authorized to create an API, please contact your administrator."
 }
