--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1366,7 +1366,7 @@
   "navbar.environments.label": "Environnements",
   "pricing.add.new.env.btn.label": "Ajouter un environnement",
   "pricing.import.env.btn.label": "Importer un environnement",
-  "pricing.default.env.btn.label": "Environment par default",
+  "pricing.default.env.btn.label": "Environnement par défault",
   "pricing.clone.env.btn.label": "Dupliquer l'environnement",
   "pricing.edit.env.btn.label": "Modifier l'environnement",
   "pricing.delete.env.btn.label": "Supprimer l'environnement",
@@ -1374,11 +1374,11 @@
   "documentation.add.button.label": "Initialiser la documentation",
   "team_apikey_aggregatePlans_title": "Clés d'API agregées",
   "constraints.plan.custom-name.one-of.environment": "Le nom du plan doit correspondre à l'un des environnements disponibles",
-  "aggregated.apikey.badge.title": "Clé d'API aggrégée",
+  "aggregated.apikey.badge.title": "Clé d'API agrégée",
   "aggregated.apikey.badge.apikey.name": "Nom personnalisée de la clé",
   "apisubscription.lastUsage.label": "Dernier usage",
   "N/A": "N/A",
-  "semver.error.message": "Une version ne peut pas être créée avec des caractère spéciaux : %s",
+  "semver.error.message": "Une version ne peut pas être créée avec des caractères spéciaux : %s",
   "version.creation.success.message": "La nouvelle version de l'API a été créée avec succès",
-  "error.message.creation.security.enabled": "Vous n'êtes pas authorisé a créer d'API, merci de contacter votre administrateur."
+  "error.message.creation.security.enabled": "Vous n'êtes pas autorisé a créer d'API, merci de contacter votre administrateur."
 }
